// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/sticky-notes components/StickyRegion Empty 1`] = `
<div
  className="bg-gray-200 block sticky-region cursor-pointer"
  onDoubleClick={[Function]}
/>
`;

exports[`@mykeels/sticky-notes components/StickyRegion With Content 1`] = `
<div
  className="bg-gray-200 block sticky-region cursor-pointer"
  onDoubleClick={[Function]}
>
  <div>
    Hello World
  </div>
</div>
`;
